[package]
name = "todo-plot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.0"
clap = { version="4.0.27", features = ["derive"] }
rgb = "0.8.34"
textplots = "0.8"
